feat: integrate JWT authentication and spring security