@@ -26,7 +26,7 @@ public class AsyncService {
 
     @Async("asyncServiceExecutor")
     public void execute(String username) {
-        log.info(username + " " + LocalDateTime.now() + " thread id: " + Thread.currentThread().getId());
+        log.info(username + " " + LocalDateTime.now() + " thread id: " + Thread.currentThread().threadId());
         String fileName = username + LocalDateTime.now().minusDays(1).format(DateTimeFormatter.ofPattern("yyyy-MM-dd")) + ".txt";
         try {
             writeToFile(username, fileName);
